--- a/src/app.scss
+++ b/src/app.scss
@@ -1,26 +1,14 @@
 .main{
     @apply w-screen h-screen bg-gray-900 text-white;
 
-    .slide-right-enter-active,
-    .slide-right-leave-active,
-    .slide-left-enter-active,
-    .slide-left-leave-active{
-    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+    .fade-enter-active,
+    .fade-leave-active {
+        transition: opacity 1s ease;
     }
 
-    .slide-left-enter {
-    transform: translateX(90%);
+    .fade-enter-from,
+    .fade-leave-to {
+        opacity: 0;
     }
 
-    .slide-left-leave-to {
-    transform: translateX(-90%);
-    }
-
-    .slide-right-enter {
-    transform: translateX(-90%);
-    }
-
-    .slide-right-leave-to {
-    transform: translateX(90%);
-    }
 }
