--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -7,3 +7,7 @@ font-family: "Bobaland";
 src: local("Bobaland"),
     url(./fonts/bobaland.ttf) format("truetype");
 }
+
+body{
+    overflow: hidden;
+}
