--- a/src/app/pages/generator/components/generator-navbar/generator-navbar.scss
+++ b/src/app/pages/generator/components/generator-navbar/generator-navbar.scss
@@ -1,11 +1,11 @@
-.nav{
-    font-family: "Bobaland", Arial, Helvetica, sans-serif;
+.nav {
+  font-family: 'Bobaland', Arial, Helvetica, sans-serif;
 
-    &__container{
-        @apply flex gap-2 justify-center items-center text-3xl p-6 bg-slate-500 h-[10%];
-    }
+  &__container {
+    @apply flex gap-2 justify-center items-center text-3xl p-6 bg-slate-500 h-[10%];
+  }
 
-    &__nickname{
-        @apply text-amber-200;
-    }
+  &__nickname {
+    @apply text-amber-200;
+  }
 }
