--- a/src/app/pages/nickname/nickname-page.scss
+++ b/src/app/pages/nickname/nickname-page.scss
@@ -1,27 +1,30 @@
-.section{
-    @apply flex flex-col gap-6 justify-center items-center w-screen h-screen; 
+.section {
+  @apply flex flex-col gap-6 justify-center items-center w-screen h-screen;
 
-    &__title{
-        font-size: 5rem;
-        font-family: "Bobaland", Arial, Helvetica, sans-serif;
-    }
+  &__title {
+    font-size: 5rem;
+    font-family: 'Bobaland', Arial, Helvetica, sans-serif;
+  }
 }
 
-.form{
-    &__container{
-        @apply flex flex-col gap-2 p-6 w-full md:w-6/12 lg:w-3/12 xl:w-2/12;
-    }
-    &__input{
-        @apply p-2 text-gray-900 outline w-full;
-        &--is-error{
-            @apply outline outline-1 outline-offset-2 outline-red-500;
-        }
-    }
-    &__label{
-        @apply text-xs;
-    }
+.form {
+  &__container {
+    @apply flex flex-col gap-2 p-6 w-full md:w-6/12 lg:w-3/12 xl:w-2/12;
+  }
 
-    &__button{
-        @apply p-2 rounded bg-green-600;
+  &__input {
+    @apply p-2 text-gray-900 outline w-full;
+
+    &--is-error {
+      @apply outline outline-1 outline-offset-2 outline-red-500;
     }
+  }
+
+  &__label {
+    @apply text-xs;
+  }
+
+  &__button {
+    @apply p-2 rounded bg-green-600;
+  }
 }
